--- a/src/index.css
+++ b/src/index.css
@@ -15,4 +15,7 @@ h3 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 10%;
 }
