--- a/src/index.css
+++ b/src/index.css
@@ -23,4 +23,7 @@ h3 {
   margin-left: 10%;
   margin-right: 10%;
   margin-bottom: 10%;
+  border: 4px solid white;
+  border-radius: 10px;
+  padding: 4%;
 }
