--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
 }
 
 h2 {
-  font-size: 70px;
+  font-size: 2em;
 }
 
 h3 {
@@ -28,4 +28,5 @@ h3 {
   border-radius: 10px;
   padding: 4%;
   background-color: #2b5a7b;
+  box-shadow: 3px 3px 15px black;
 }
