changed project cards to dim and show links for the repo and live site as well as a description

--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,24 @@ h3 {
   background-color: #2b5a7b;
   box-shadow: 3px 3px 15px black;
 }
+
+.links {
+  visibility: hidden;
+}
+
+.projectContainer:hover .links {
+  visibility: visible;
+}
+
+.projectContainer:hover img {
+  filter: brightness(0.4);
+  transition: filter 0.5s ease-in-out;
+}
+
+.links {
+  transition: visibility 0.2s ease-in;
+}
+
+.projectLink:hover {
+  text-shadow: 3px 3px 10px white;
+}
